--- a/calculator.html
+++ b/calculator.html
@@ -288,6 +288,50 @@ footer{
   margin-top:8px;
   opacity:0.78;
 }
+
+/* ===========================
+   Mobile tuning (≤ 600px)
+   =========================== */
+@media (max-width:600px){
+  body{
+    padding:16px 6px 24px;
+  }
+
+  .shell{
+    padding:18px 14px 26px;
+    border-radius:22px;
+  }
+
+  .hero-strip{
+    max-width:100%;
+    margin:4px 0 12px;
+    padding:10px 12px;
+    font-size:11px;
+  }
+
+  .container{
+    max-width:100%;
+    padding:0;
+    margin-top:16px;
+  }
+
+  .card{
+    padding:14px 12px 14px;
+    margin-bottom:14px;
+  }
+
+  header h1{
+    font-size:22px;
+  }
+
+  header p{
+    font-size:13px;
+  }
+
+  .result-pill{
+    min-width:140px;
+  }
+}
 </style>
 </head>
 
